Fixed cover on Safari.

--- a/public-build/css/main.css
+++ b/public-build/css/main.css
@@ -7766,7 +7766,11 @@ textarea {
   top: -5px;
 }
 .background {
-  background: url("/img/background.jpg") repeat scroll 0% 0% / cover transparent;
+  background: url("/img/background.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size:    cover;
+  -o-background-size:      cover;
+  background-size:         cover;
 }
 .navbar .brand {
   font-size: 26px;
